add: new pages and fix dashboard style

--- a/src/app/styles/buttons.css
+++ b/src/app/styles/buttons.css
@@ -1,5 +1,5 @@
 .login-button {
-    background-color: rgb(0, 71, 153); /* Green */
+    background-color: #ff6f3c; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
