--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
+  color: rgb(26, 25, 25);
   background: var(--background);
   font-family:"Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -27,6 +27,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .home-container {
@@ -55,4 +59,17 @@ a {
   border-radius: 20px;
   border-color: black;
   border-style:solid;
+}
+
+.Login-text {
+  font-size: xx-large;
+  font-weight: bolder;
+}
+
+.Log-text {
+  color: rgb(50, 124, 192);
+}
+
+.In-text {
+  color: #ff347f	;
 }
