--- a/src/app/pages/quiz/quiz.page.css
+++ b/src/app/pages/quiz/quiz.page.css
@@ -5,6 +5,8 @@
     border-color: rgb(123, 100, 85);
     box-shadow: 2px 2px 10px rgb(54, 48, 43);
     z-index: 1;
+    color: white;
+    height: fit-content;
 }
 
 .quiz-bg {
@@ -28,6 +30,16 @@
     right: 10px;
     z-index: 1;
     min-width: 400px;
+}
+
+input[type='radio'] {
+    width: 25px;
+    vertical-align: middle;
+    padding-top: auto;
+  }
+
+.choice-text {
+    font-size: larger;
 }
 
 /* 
