--- a/src/app/styles/cards.css
+++ b/src/app/styles/cards.css
@@ -1,49 +1,57 @@
 .card-head {
-    border-radius: 20px 20px 0px 0px;
-    background-color: rgb(26, 191, 241);
-    height: 20%;
-    color: white;
-    font-size:xx-large;
-    font-weight: 700;
-  }
-  
-  .card-body {
-    border-radius: 0px 0px 20px 20px;
-    background-color: white;
-    height: 80%;
-    color: gray;
-    font-size: large;
-  }
+  border-radius: 20px 20px 0px 0px;
+  background-color: rgb(26, 191, 241);
+  height: 20%;
+  color: white;
+  font-size: xx-large;
+  font-weight: 700;
+}
 
-  .subtext {
-    font-size: small;
-    text-align: center;
-  }
+.card-body {
+  border-radius: 0px 0px 20px 20px;
+  background-color: white;
+  height: 80%;
+  color: gray;
+  font-size: large;
+}
 
-  .card-price {
-    font-size:xx-large;
-    font-weight: 600;
-  }
+.subtext {
+  font-size: small;
+  text-align: center;
+}
 
-  .drag-choice {
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 10px;
-    border-color: white;
-    cursor: pointer;
-  }
+.card-price {
+  font-size: xx-large;
+  font-weight: 600;
+}
 
-  .drag-selection {
-    border-radius: 10px;
-    border-style: solid;
-    border-color: blue;
-    border-width: 10px;
-  }
+.drag-choice {
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: white;
+  cursor: pointer;
+}
 
-  .dashboard-card {
-    background-color: white;
-    box-shadow: 2px 2px 10px #34353a;
-    margin-top: 7rem;
-    width: 80%;
-    border-radius: 10px;
-  }
+.drag-selection {
+  border-radius: 10px;
+  border-style: solid;
+  border-color: blue;
+  border-width: 10px;
+}
+
+.dashboard-card {
+  box-shadow: 2px 2px 10px #34353a;
+  margin-top: 7rem;
+  width: 80%;
+  border-radius: 10px;
+  position: relative;
+}
+
+.dashboard-img {
+  opacity: 0.5;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
