--- a/src/app/styles/inputs.css
+++ b/src/app/styles/inputs.css
@@ -1,15 +1,21 @@
 #user {
     border-radius: 25px;
-    border: 2px solid rgb(0, 71, 153);
+    border: 2px solid #e3e3e3;
     padding: 20px; 
     width: 100%;
     height: 15px;    
+    background-color: #e3e3e3;
+    color: #929aab;
+    font-weight: bold;
 }
 
 #password {
     border-radius: 25px;
-    border: 2px solid rgb(0, 71, 153);
+    border: 2px solid #e3e3e3;
     padding: 20px; 
     width: 100%;
     height: 15px;    
+    background-color: #e3e3e3;
+    color: #929aab;
+    font-weight: bold;
 }
