--- a/src/app/pages/login/login.page.css
+++ b/src/app/pages/login/login.page.css
@@ -20,7 +20,7 @@
 
 
 .login-page {
-    background-image: url("../../../../public/imgs/bella.gif");
+    background-image: url("../../../../public/imgs/b&p.login.gif");
     /* background-color: black; */
     background-size: cover;
 }
