--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import '../app/styles/sidebar.css';
+
 :root {
   --background: #e6e6e6;
   --foreground: white;
@@ -25,8 +27,8 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 .cursor-pointer {
